# opener

./: .gitignore  AGENTS.md  CLAUDE.md  PROMPT.md  README.md  package-lock.json  package.json  tailwind.config.js  vite.config.js
.github/workflows/: release.yml
docs/superpowers/plans/: 2026-03-30-entry-editor-webview.md
docs/superpowers/specs/: 2026-03-30-entry-editor-webview-design.md  2026-03-30-entry-type-filter-tags-design.md
frontend/: index.html
frontend/src/: app.js  entry-editor-context.mjs  entry-editor-context.test.mjs  entry-form-requirements.mjs  entry-form-requirements.test.mjs  entry-list-filters.mjs  entry-list-filters.test.mjs  input.css  tauri-bridge.mjs  window-role.mjs  window-role.test.mjs
src-tauri/: Cargo.toml  tauri.conf.json  tauri.macos.conf.json  windows-config.test.mjs
src-tauri/capabilities/: default.json  default.test.mjs
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  database.rs  executor.rs  hotkeys.rs  lib.rs  main.rs  models.rs  security.rs  windowing.rs
