[package]
name = "opener"
version = "1.0.0"
description = "Desktop Launcher Application"
authors = ["Opener Team"]
edition = "2021"
rust-version = "1.70"

[lib]
name = "opener_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[[bin]]
name = "opener"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-os = "2"
tauri-plugin-autostart = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
rusqlite = { version = "0.32", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["full"] }
thiserror = "2"
directories = "5"
open = "5"
keyring = "3"
base64 = "0.22"
log = "0.4"
env_logger = "0.11"
uuid = { version = "1", features = ["v4"] }
fuzzy-matcher = "0.3"
which = "6"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["handleapi", "processthreadsapi", "psapi", "shellapi", "winnt", "winuser"] }
lnk = "0.5"

[dev-dependencies]
tempfile = "3"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
